# transcribems

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CORRECTION_NOTICE.md  DEPLOYMENT_PACKAGE.md  Dockerfile  FINAL_PRODUCTION_VALIDATION.md  IMPLEMENTATION_COMPLETE.md  MERGE_COMPLETE.md  Makefile  PRODUCTION_READY_DEPLOYMENT.md  README.md  SYSTEM_OVERVIEW.md  WORKING_SYSTEM_VALIDATION.md  corrected_optimized_test_results.json  create_test_audio.py  integration_test.py  integration_test_results.json  multi_speaker.srt  multi_speaker.vtt  mypy.ini  optimized_audio_test_results.json  performance_benchmark.py  performance_benchmark_report.json  production_validation_test.py  pyproject.toml  reorganize_folders.py  requirements-formatter.txt  setup.cfg  speaker_database.db  start_server.sh  system_demo.py  system_demo_report.json  template_database.db  test_complete_pipeline.py  test_correct_whisperx_diarization.py  test_diarization_debug.py  test_direct_services.py  test_fixed_whisperx.py  (+12 more)
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
config/: default.env  logging.yaml
deploy/docker/: docker-compose.yml
docs/: AUDIO_BACKEND_TRUTH.md  CHANGELOG_CLI.md  CUDNN_FIX_SUMMARY.md  CURRENT_STATUS.md  DOCUMENTATION_INDEX.md  FINAL_PERFORMANCE_ANALYSIS.md  FINAL_REORGANIZATION.md  GITHUB_BASELINE_STATUS.md  GPU_ACCELERATION_GUIDE.md  GPU_TESTING_REQUIREMENTS.md  HTTP_CLIENT_EXAMPLES.md  HTTP_IMPLEMENTATION_SUMMARY.md  HUGGINGFACE_TOKEN_SETUP.md  INTEGRATION_EXAMPLES.md  LARGE_FILE_TEST_ANALYSIS.md  MCP_DEPLOYMENT_GUIDE.md  PERFORMANCE_BENCHMARKS.md  PLATFORM_INTEGRATION_VALIDATION.md  PRODUCTION_DEPLOYMENT_CHECKLIST.md  PROJECT_STRUCTURE.md  PYTORCH_CUDA_COMPATIBILITY.md  QUICK_START_CLI.md  README.md  RENAME_COMPLETE_SUMMARY.md  RENAME_PROCEDURE.md  RENAME_TEST_EVIDENCE.md  RENAME_VERIFICATION.md  REORGANIZATION_SUMMARY.md  REST_API_GUIDE.md  SERVER_ARCHITECTURE.md  SERVER_MODES.md  SPEAKER_DATABASE_DESIGN.md  SPEAKER_DATABASE_IMPLEMENTATION_SUMMARY.md  SPEAKER_DATABASE_USAGE.md  SPEAKER_DIARIZATION_FIX.md  SPEAKER_IDENTIFICATION_UI_GUIDE.md  SYSTEM_ARCHITECTURE_VERIFIED.md  SYSTEM_OVERVIEW.md  TESTING_GUIDE.md  USE_TRANSCRIPT_API.md  (+2 more)
docs/architecture/: C4_ARCHITECTURE_DOCUMENTATION.md
docs/development/: FOLDER_STRUCTURE_ANALYSIS.md
final_validation/: multi_speaker.json  multi_speaker.srt  multi_speaker.tsv  multi_speaker.txt  multi_speaker.vtt
implement/: plan.md  state.json
job_storage/: 0320a459-fae7-4d0b-86bf-46138a1c3c49.json  0b3bb88f-3657-4b23-82cd-a39e29e26db8.json  220f1f8f-f5d5-41d8-a5fc-92c466813890.json  24b9373c-cb0c-49ec-b31d-f2f7727f6a8a.json  256b2687-6386-4f10-9d66-f11002c26999.json  2c89d330-a929-42a3-8c71-4e2ff1a18a8f.json  350cad78-0d51-4f6a-8157-610f43381b1d.json  390c2480-c3db-41c4-8702-c32ae13d2f44.json  51e7bd98-f263-4275-93d9-831fbbd3b4ee.json  5338b34f-8efe-4e74-aa26-54d45addfc0b.json  674669ca-3a2c-4d45-a155-37eca09950d2.json  74d9bdd0-f969-4ff6-b443-19da42bedd74.json  85dbb708-a2ea-4b66-9ed4-4931bffc51c8.json  9431f1b3-8dd6-410e-870e-78890545daa9.json  9df3643f-efb6-4e8d-806d-a1609b401a81.json  a46f7aad-5765-4b45-a1b8-ce6a6f7e79f9.json  a594d374-b5ab-46bb-9e57-f225d87603fa.json  afec91b3-d55d-4dd7-bffb-b4e850de166a.json  b0422a54-4b65-4070-a5e9-f9c77d3e48d0.json  b21f3755-2bc0-44d0-8537-8acd1f83cdb8.json  b84a56bf-4b1d-4c20-ad9a-96073410a5e5.json  b84bb8ab-ed08-4b9f-bb59-c8c5e0cf2224.json  bde9e3ea-8a0f-475e-82b0-61f4be914c50.json  c903753d-a3a7-4251-8bbd-69d39a707146.json  ce2dfbc0-38cb-4e2e-8598-93a492c42df6.json  cf4e3e92-c63d-44f7-8cfa-418c5258bea3.json  d1b10d16-658a-4405-a479-947422f5e387.json  d9f415c6-476c-413e-9922-cf17917eebc1.json  de2518aa-903a-4280-ae29-ffb0728fb0b7.json  e6cdc530-784b-4c68-851d-f0b339a42d37.json  f39d0fbf-33c1-45f9-93ae-9f44fff191af.json
production_validation/: PRODUCTION_READINESS_REPORT.json  PRODUCTION_SUMMARY.md  complete_pipeline_result.json  mcp_integration_result.json  real_audio_validation.json
scripts/: start_mcp_server.sh  start_mcp_server_http.sh  test_mcp_connection.py  validate_http_implementation.sh
src/: __init__.py  error_handler.py  main.py  main_simple.py
templates/: general_meeting_template.json  project_meeting_template.json  system_request.json
test_audio/: test_audio_metadata.json
tests/: __init__.py  conftest.py  test_cli.py  test_transcript_formatter.py  test_whisperx_direct_simple.py  test_whisperx_standalone.py
transcribe_mcp_env/: pyvenv.cfg
transcribems_data/: history.json
transcribems_env/: pyvenv.cfg
transcript_output/: coach-9-16-2025-optimized.json  coach-9-16-2025-optimized.srt  coach-9-16-2025-optimized.txt  coach-9-16-2025-optimized_timestamped.txt
validation_results/: coach-9-16-2025.json  coach-9-16-2025.srt  coach-9-16-2025.tsv  coach-9-16-2025.txt  coach-9-16-2025.vtt
(+151 files in other folders)
